# programming_for_linguists

./: .gitignore  Dockerfile  README.md  bad-oop.py  bad_pep8.py  pyproject.toml
mixins_using/: errors.py  mixins.py  pipeline.py  service.py  speaker.py
seminars/: bad_pep8.py  binary_trees.py  dependency_injection.py  dp_memo.py  dp_naive.py
seminars/mixins_using/: errors.py  pipeline.py  speaker.py
src/: main.py
src/api/: routers.py  validators.py
src/services/: transcription.py
