[project]
name = "programming-for-linguists"
version = "0.1.0"
description = ""
authors = [
    {name = "baronofff",email = "baronov.ev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "speechrecognition (>=3.14.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
