[project]
name = "programming-for-linguists"
version = "0.1.0"
description = ""
authors = [
    {name = "baronofff",email = "baronov.ev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "speechrecognition (>=3.14.4,<4.0.0)",
    "ruff (>=0.14.7,<0.15.0)"
]

[project.optional-dependencies]
dev = [
    "flake8==7.3.0",
    "flake8-docstrings==1.7.0",
    "flake8-print==5.0.0",
    "isort==6.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
