[project]
name = "programming-for-linguists"
version = "0.1.0"
description = "text-to-speech"
authors = [
    {name = "baronofff",email = "baronov.ev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "speechrecognition (>=3.14.4,<4.0.0)",
    "ruff (>=0.14.7,<0.15.0)"
]

[project.optional-dependencies]
dev = [
    "flake8==7.3.0",
    "flake8-docstrings==1.7.0",
    "flake8-print==5.0.0",
    "isort==6.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120  # максимальная длина строки кода
target-version = 'py310'  # версия Python - позволяет Ruff игнорировать синтаксис, которого нет в этой версии
exclude = ['**/tests/**', '**/2_lesson/**', '**/3_lesson/**']  # папки или файлы, которые Ruff не будет проверять

[tool.ruff.format]
quote-style = 'single'  # форматер Ruff будет приводить строки к одинарным кавычкам '...' вместо двойных "..."

[tool.ruff.lint]
# все правила - https://docs.astral.sh/ruff/rules/
select = [
    'E',  # ошибки стиля кода по стандарту PEP8
    'F',  # статический анализ кода (Pyflakes), поиск логических ошибок (например, импортирован модуль, но не используется)
    'I',  # проверка сортировки и группировки импортов (через isort)
    'W',  # предупреждения PEP8, не критичные
    'Q',  # flake8-quotes
    'RSE',  # flake8-raise
    'RET',  # flake8-return
    'SLF',  # flake8-self
    'SIM',  # flake8-simplify
    'TID',  # flake8-tidy-imports
    'TC',  # flake8-type-checking
    'INT',  # flake8-gettext
    'ARG',  # flake8-unused-arguments
    'PL',  # Pylint
    'NPY',  # NumPy-specific rules
    'FAST',  # FastAPI
]
ignore = [
    'D100',  # Необходимость документации для всех публичных модулей
    'D104',  # Необходимость документации для всех публичных пакетов
    'G004',  # Запрет на использование f-строк в логировании
    'RUF001', 'RUF002', 'RUF003',   # Запрет на использование неоднозначных символов в комментариях (конфликт с русским языком)
]

[tool.ruff.lint.pydocstyle]
convention = 'pep257'  # использовать стандарт PEP 257 для docstring

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
